--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div id="app">
-    <h1>THE VUE VIEW</h1>
+    <h1>The Vue Tweet App</h1>
     <div class="user">
       <div class="user-information">
         <div class="image-container">
